# cardano-ledger-specs

./: cabal.project  shell.nix  stack.yaml
alonzo/formal-spec/: properties.tex  transactions.tex  txinfo.tex  utxo.tex
alonzo/impl/: cardano-ledger-alonzo.cabal
alonzo/test/: cardano-ledger-alonzo-test.cabal
cardano-ledger-omega/: CHANGELOG.md  cardano-ledger-omega.cabal
cardano-ledger-omega/src/Cardano/Ledger/: Indexed.hs  Proof.hs  Props.hs  Updaters.hs
cardano-ledger-omega/src/Test/Cardano/Crypto/: Utils.hs
cardano-ledger-test/: cardano-ledger-test.cabal
cardano-ledger-test/benchProperty/: Main.hs
cardano-ledger-test/test/: Tests.hs
cardano-protocol-tpraos/: cardano-protocol-tpraos.cabal
doc/explanations/: min-utxo-alonzo.rst
eras/shelley-ma/test-suite/test/: Tests.hs
eras/shelley/chain-and-ledger/shelley-spec-ledger-test/: shelley-spec-ledger-test.cabal
eras/shelley/test-suite/bench/: BenchUTxOAggregate.hs  BenchValidation.hs  Main.hs
libs/cardano-ledger-test/benchProperty/: Main.hs
plutus-preprocessor/src/: Main.hs
scripts/: ormolise.sh
semantics/executable-spec/: small-steps.cabal
shelley-ma/shelley-ma-test/: cardano-ledger-shelley-ma-test.cabal
shelley-mc/notes/: workingnotes.txt
shelley/chain-and-ledger/executable-spec/: delegation.cabal  shelley-spec-ledger.cabal
shelley/chain-and-ledger/formal-spec/: consensus.tex  incentives.tex  iohk.sty  ledger-spec.tex  properties.tex
shelley/chain-and-ledger/shelley-spec-ledger-test/: shelley-spec-ledger-test.cabal
weekly-reports/2019-05-31/: milestone.org
(+304 files in other folders)
