cabal-version: 3.0

name:                cardano-ledger-omega
version:             0.1.0.0
synopsis:
  Testing API across all eras.
-- description:
-- bug-reports:
license:             Apache-2.0
author:              IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2020 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:
  CHANGELOG.md

common base
  build-depends:      base >= 4.12 && < 4.15

common project-config
  default-language:   Haskell2010

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages

library
  import:             base, project-config
  hs-source-dirs:     src
  exposed-modules:
    Cardano.Ledger.Indexed
    Cardano.Ledger.Proof
    Cardano.Ledger.Props
    Cardano.Ledger.Updaters
    Test.Cardano.Crypto.Utils
    Test.Cardano.Crypto.VRF.Fake
  build-depends:
    bytestring,
    cardano-binary,
    cardano-crypto-class,
    cardano-ledger-alonzo,
    cardano-ledger-core,
    cardano-ledger-shelley-ma,
    cardano-slotting,
    containers,
    data-default-class,
    nothunks,
    plutus-tx,
    shelley-spec-ledger,
    small-steps,
    strict-containers,
    time,
